--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
         body {
-            background-color: #FFCAC8;
+            background-color: #F0DBDB;
 
         }
        hr {
             border: 5px dotted #F48484;
             border-style: none none dotted;
-            background-color: #FFCAC8;
+            background-color: #F0DBDB;
             width: 5%;
             align: left;
 }
