--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
         body {
             background-color: #F0DBDB;
-            font-family: cursive;
+            font-family: 'Courgette', cursive;
 
         }
        hr {
